@@ -1,6 +1,11 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fenc=utf-8 sts=4 ts=4 et nomod:
 
+2015-09-08 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Fix application_name service configuration option usage when
+      automatic_loading is false
+
 2015-09-05 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Add more comments to the hello_world5 example
